# HotS-for-big-screen-resolutions

./: .env.example  HotS-resolution-fix.py  LICENSE  README.md  pyproject.toml  resolution_fix.py
.github/ISSUE_TEMPLATE/: bug_report.md
modules/: Logger_factory.py  OS_checker.py  permission_factory.py
src/: pyproject.toml  resolution_fix.py
src/Heroes_Of_The_Storm_resolution_fix_kazasho/: resolution_fix.py
src/Heroes_Of_The_Storm_resolution_fix_kazasho/modules/: OS_checker.py
src/HotS_for_big_screen_resolutions_kazasho/modules/: Logger_factory.py
src/modules/: Config_change_content.py  File_permission_factory.py  OS_checker.py
