[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "HotS-for-big-screen-resolutions_kazasho"
version = "1.0.0"
authors = [
  { name="Kazasho" },
]
description = "A script to enable big screen resolutions in Heroes of the Storm"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
  "python-dotenv",
]


[project.urls]
Homepage = "https://github.com/kazasho/HotS-for-big-screen-resolutions"
Issues = "https://github.com/kazasho/HotS-for-big-screen-resolutions/issues"