[project]
name = "Heroes_of_the_Storm_resolution_fix_kazasho"
version = "0.0.1"
authors = [
  { name="kazasho", email="sbulling0@gmail.com" },
]
description = "A script to enable bigger resolutions in Heroes of the Storm"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[project.urls]
Homepage = "https://github.com/kazasho/Heroes_of_the_Storm_resolution_fix_kazasho"
Issues = "https://github.com/kazasho/Heroes_of_the_Storm_resolution_fix_kazasho/issues"